# markethub

./: .env.example  .gitignore  Cargo.toml  DEV_STATUS.md  Dockerfile  PROJECT.md  README.md  TEST_PLAN.md  audit.toml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci-cd.yml  ci.yml
grafana/dashboards/: markethub-overview.json
grafana/provisioning/dashboards/: markethub.yml
migrations/: 001_initial_schema.down.sql  001_initial_schema.sql
prometheus/: prometheus.yml
scripts/: coverage.sh
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs  state.rs
src/handlers/: auth.rs  cart.rs  members.rs  mod.rs  orders.rs  products.rs  stores.rs  users.rs
src/middleware/: auth.rs  metrics.rs  mod.rs  permissions.rs
src/models/: mod.rs  order.rs  permission.rs  product.rs  store.rs  user.rs
src/repositories/: access_grant_repo.rs  analytics_repo.rs  cart_repo.rs  member_repo.rs  mod.rs  order_repo.rs  product_repo.rs  store_repo.rs  user_repo.rs
src/services/: analytics_service.rs  auth_service.rs  cart_service.rs  mod.rs  order_service.rs  permission_service.rs  product_service.rs  store_service.rs  user_service.rs
src/utils/: jwt.rs  mod.rs  password.rs  validators.rs
tests/: analytics_tests.rs  auth_stack_tests.rs  integration_test.rs  permission_tests.rs  product_cart_order_tests.rs  service_tests.rs  store_management_tests.rs
tests/common/: mod.rs
