[package]
name = "markethub"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
regex = "1.11"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Auth
jsonwebtoken = { version = "10.2", default-features = false, features = ["aws_lc_rs"] }
argon2 = "0.5"
rand_core = "0.6"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.14"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rust_decimal = { version = "1.37", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
fake = "4.4"
rstest = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
